--- a/blog/assets/css/main.css
+++ b/blog/assets/css/main.css
@@ -3166,7 +3166,7 @@ input, select, textarea {
 
 	#footer {
 		padding: 5em 0 6em 0 ;
-		background-color: #C684D8;
+		background-color: #EFEFEF;
 	}
 
 		#footer > .inner {
