--- a/note/assets/css/main.css
+++ b/note/assets/css/main.css
@@ -2710,7 +2710,7 @@ input, select, textarea {
 			}
 
 			.tiles article.style2 > .image:before {
-				background-color: #000000;
+				background-color: #00000055;
 			}
 
 			.tiles article.style3 > .image:before {
@@ -2726,7 +2726,7 @@ input, select, textarea {
 			}
 
 			.tiles article.style6 > .image:before {
-				background-color: #000000;
+				background-color: #00000000;
 			}
 
 			body:not(.is-touch) .tiles article:hover > .image {
