--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2043,7 +2043,7 @@ input, select, textarea {
 			}
 
 			.main.style3.primary {
-				background: #FFFFFF;
+				background: #ffffff;
 			}
 
 			.main.style3.secondary {
